--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "antd": "^3.23.4",
     "babel-plugin-import": "^1.12.2",
     "react": "^16.9.0",
-    "react-app-rewired": "^2.0.2-next.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
   },
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "customize-cra": "^0.7.0",
+    "react-app-rewired": "^2.1.3"
   }
 }
